fixed space before first number by align text to end

--- a/styles/global.css
+++ b/styles/global.css
@@ -82,3 +82,7 @@ input:active[type='button'] {
     -moz-box-shadow: inset 0px 0px 5px #c1c1c1;
     box-shadow: inset 0px 0px 5px #c1c1c1;
 }
+
+#result {
+    text-align: end;
+}
